plugins/zoom: use actual monitor layout in push

Before the virtual screen size was used to check for boundaries of
monitors. This does not work when the monitors are un-aligned and don't
form a perfect rectangle.

BUG: 467182